<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/watermark"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/paddingTeam"
                    android:text="@string/larusso"
                    android:textSize="@dimen/teamTextSize"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/teamLR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/paddingBottom"
                    android:text="@string/displayScoreLR"
                    android:textSize="@dimen/scoreTextSize"
                    android:typeface="sans" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addTwoForLR"
                    android:text="@string/crossBlock"
                    android:textColor="#FAFAFA" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addFiveForLR"
                    android:text="@string/frontKick"
                    android:textColor="#FAFAFA" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addFiveForLR"
                    android:text="@string/knifeHandStrike"
                    android:textColor="#FAFAFA" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addThreeForLR"
                    android:text="@string/kneeSmash"
                    android:textColor="#FAFAFA" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="495dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/paddingTeam"
                    android:text="@string/cobrakai"
                    android:textSize="@dimen/teamTextSize"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/teamCK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/paddingBottom"
                    android:text="@string/displayScoreCK"
                    android:textSize="@dimen/scoreTextSize"
                    android:typeface="sans" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addTwoForCK"
                    android:text="@string/crossBlock"
                    android:textColor="#FAFAFA" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addFiveForCK"
                    android:text="@string/frontKick"
                    android:textColor="#FAFAFA" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addFiveForCK"
                    android:text="@string/knifeHandStrike"
                    android:textColor="#FAFAFA" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutMarginBottom"
                    android:layout_marginEnd="@dimen/layoutMarginEnd"
                    android:layout_marginLeft="@dimen/layoutMarginLeft"
                    android:layout_marginRight="@dimen/layoutMarginRight"
                    android:layout_marginStart="@dimen/layoutMarginStart"
                    android:layout_marginTop="@dimen/layoutMarginTop"
                    android:backgroundTint="#212121"
                    android:onClick="addThreeForCK"
                    android:text="@string/kneeSmash"
                    android:textColor="#FAFAFA" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#212121"
            android:onClick="resetScore"
            android:text="@string/stop"
            android:textColor="#FAFAFA"
            android:translationY="-20dp" />

    </RelativeLayout>

</ScrollView>